--- a/.github/workflows/publish_image_to_dockerhub.yml
+++ b/.github/workflows/publish_image_to_dockerhub.yml
@@ -25,7 +25,7 @@ jobs:
       run: |
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
-        git pull origin master
+        git pull
         awk -v tag=${{ steps.bump.outputs.new_tag }} '{gsub("v[0-9]+[.]+.+", tag, $0); print}' docker-compose.yml > docker-compose.tmp && mv docker-compose.tmp docker-compose.yml
         git add docker-compose.yml
         git commit -m "update Docker Compose"
