--- a/.github/workflows/publish_image_to_dockerhub.yml
+++ b/.github/workflows/publish_image_to_dockerhub.yml
@@ -41,6 +41,7 @@ jobs:
       uses: elgohr/Publish-Docker-Github-Action@master
       with:
         name: tbeuzen/py-pkgs-bookdown
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
+        username: ${{ secrets.DOCKER_USERNAME_TB }}
+        password: ${{ secrets.DOCKER_PASSWORD_TB }}
         tags: "latest,${{ steps.bump.outputs.new_tag }}"
+        with: bookdown
