--- a/.github/workflows/publish_image_to_dockerhub.yml
+++ b/.github/workflows/publish_image_to_dockerhub.yml
@@ -1,30 +1,33 @@
 name: Publish Docker image on DockerHub
-on: 
-  push: 
+on:
+  push:
     branches:
-      - main
-    paths: 
+      - vscode
+    paths:
       - 'Dockerfile'
-    
+
 jobs:
-  build:
+  build-and-publish:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@master
-    - uses: actions/checkout@master
+
+    - name: Checkout repository
+      uses: actions/checkout@master
       with:
         fetch-depth: '0'
+
     - name: Bump version and push tag
       uses: anothrNick/github-tag-action@1.17.2
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        WITH_V: true
       id: bump
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
+        WITH_V: true
+
     - name: Create Release
       id: create_release
       uses: actions/create-release@v1
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         tag_name: ${{ steps.bump.outputs.new_tag }}
         release_name: ${{ steps.bump.outputs.new_tag }}
@@ -33,10 +36,12 @@ jobs:
           - Rebuilt Docker image and published to DockerHub with new tag
         draft: false
         prerelease: false
+
     - name: Publish to Registry
       uses: elgohr/Publish-Docker-Github-Action@master
       with:
-        name: ubcmds/poetry
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
+        name: tbeuzen/py-pkgs-vscode
+        username: ${{ secrets.DOCKER_USERNAME_TB }}
+        password: ${{ secrets.DOCKER_PASSWORD_TB }}
         tags: "latest,${{ steps.bump.outputs.new_tag }}"
+        with: vscode
