Updated elgohr/Publish-Docker-Github-Action to a supported version (v5)

--- a/.github/workflows/publish_image_to_dockerhub.yml
+++ b/.github/workflows/publish_image_to_dockerhub.yml
@@ -34,7 +34,7 @@ jobs:
         draft: false
         prerelease: false
     - name: Publish to Registry
-      uses: elgohr/Publish-Docker-Github-Action@master
+      uses: elgohr/Publish-Docker-Github-Action@v5
       with:
         name: ubcmds/poetry
         username: ${{ secrets.DOCKER_USERNAME }}
